[gd_scene load_steps=42 format=2]

[ext_resource path="res://Assets/Ginger_Bread_Man.png" type="Texture" id=1]
[ext_resource path="res://StateMachine/Jumping.gd" type="Script" id=2]
[ext_resource path="res://StateMachine/Moving.gd" type="Script" id=3]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://StateMachine/Coyote.gd" type="Script" id=5]
[ext_resource path="res://StateMachine/Idle.gd" type="Script" id=6]
[ext_resource path="res://StateMachine/Falling.gd" type="Script" id=7]
[ext_resource path="res://StateMachine/Moving_and_Jumping.gd" type="Script" id=8]
[ext_resource path="res://Player/Player.gd" type="Script" id=9]
[ext_resource path="res://Assets/knifeSlice2.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/Ginger Bread_attack!.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 62 ), SubResource( 63 ), SubResource( 64 ) ],
"loop": false,
"name": "Attacking",
"speed": 5.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": false,
"name": "Falling",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ) ],
"loop": false,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "Moving",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 8, 18.125 )

[sub_resource type="RectangleShape2D" id=35]
extents = Vector2( 11, 9.5 )

[sub_resource type="CapsuleShape2D" id=65]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 15 )
animation = "Attacking"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
scale = Vector2( 1.2, 0.8 )
shape = SubResource( 16 )

[node name="Floor" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="Floor"]
position = Vector2( -7, 14.125 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 30

[node name="Center" type="RayCast2D" parent="Floor"]
position = Vector2( -0.75, 14.125 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 30

[node name="Right" type="RayCast2D" parent="Floor"]
position = Vector2( 5.75, 14.125 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 2147483678

[node name="Wall" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="Wall"]
position = Vector2( -4.04449, 0.25 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 30
collide_with_areas = true

[node name="Right" type="RayCast2D" parent="Wall"]
position = Vector2( 3.66006, -0.2892 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 30
collide_with_areas = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Jumping" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Moving_and_Jumping" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Coyote" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="StateMachine/Coyote"]
wait_time = 0.2
one_shot = true

[node name="AttackArea" type="Area2D" parent="." groups=["Sword"]]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 20, 6.5 )
shape = SubResource( 35 )
disabled = true

[node name="AttackAreaR" type="Area2D" parent="." groups=["Sword"]]
position = Vector2( -24, 0 )
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackAreaR"]
position = Vector2( 4, 6.5 )
shape = SubResource( 35 )
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="Food_Collection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Food_Collection"]
shape = SubResource( 65 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="StateMachine/Coyote/Timer" to="StateMachine/Coyote" method="_on_Timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_entered" from="AttackAreaR" to="." method="_on_AttackAreaR_body_entered"]
[connection signal="body_entered" from="Food_Collection" to="." method="_on_Food_Collection_body_entered"]
